@@ -3,10 +3,11 @@
 ### Definition of a multi page
 ###
 
-#define _GUI_RESOLUTION RESOLUTION FONT_SIZE FONT_STYLE FONT_COLOUR_ENABLED FONT_COLOUR_DISABLED
-	[resolution]
+[multi_page_definition]
+	id = "default"
+	description = "Default multi page widget."
 
-		{RESOLUTION}
+	[resolution]
 
 		min_width = 0
 		min_height = 0
@@ -17,77 +18,17 @@
 		max_width = 0
 		max_height = 0
 
-		text_font_size = {FONT_SIZE}
-		text_font_style = {FONT_STYLE}
-
-		[state_enabled]
-
-			[draw]
-			[/draw]
-	
-		[/state_enabled]
-
-		[state_disabled]
-
-			[draw]
-			[/draw]
-
-		[/state_disabled]
-
 		[grid]
 
 			[row]
-				grow_factor = 1
+				vertical_grow = "true" 
 
 				[column]
-					grow_factor = 1
-								horizontal_grow = "true" # needed ?
-								vertical_grow = "true" # needed ?
+					horizontal_grow = "true"
 
 					[grid]
 						id = "_content_grid"
-
-						[row]
-
-							[column]
-								horizontal_grow = "true"
-								vertical_grow = "true"
-
-								[grid]
-									id = "_list_grid"
-								[/grid]
-
-							[/column]
-
-						[/row]
-
 					[/grid]
-
-				[/column]
-
-				[column]
-					grow_factor = 0
-
-					{GUI__VERTICAL_SCROLLBAR_GRID}
-
-				[/column]
-
-			[/row]
-
-			[row]
-				grow_factor = 0
-
-				[column]
-
-
-					{GUI__HORIZONTAL_SCROLLBAR_GRID}
-
-				[/column]
-
-				[column]
-
-					[spacer]
-					[/spacer]
 
 				[/column]
 
@@ -96,31 +37,6 @@
 		[/grid]
 
 	[/resolution]
-#enddef
-
-[multi_page_definition]
-	id = "default"
-	description = "Testing version."
-
-	{_GUI_RESOLUTION 
-		({GUI_TINY__RESOLUTION})
-		({GUI_TINY__FONT_SIZE__DEFAULT})
-		()
-		({GUI__FONT_COLOUR_ENABLED__DEFAULT})
-		({GUI__FONT_COLOUR_DISABLED__DEFAULT})
-	}
-
-	
-	{_GUI_RESOLUTION 
-		({GUI_NORMAL__RESOLUTION}) 
-		({GUI_NORMAL__FONT_SIZE__DEFAULT}) 
-		() 
-		({GUI__FONT_COLOUR_ENABLED__DEFAULT}) 
-		({GUI__FONT_COLOUR_DISABLED__DEFAULT}) 
-	}
 
 [/multi_page_definition]
-
-#undef _GUI_RESOLUTION 
-
 
