@@ -35,6 +35,7 @@ src/gui/widgets/label.cpp
 src/gui/widgets/listbox.cpp
 src/gui/widgets/menubar.cpp
 src/gui/widgets/minimap.cpp
+src/gui/widgets/multi_page.cpp
 src/gui/widgets/panel.cpp
 src/gui/widgets/password_box.cpp
 src/gui/widgets/scroll_label.cpp
