@@ -107,6 +107,7 @@ wesnoth_source = \
 	gui/widgets/listbox.cpp \
 	gui/widgets/menubar.cpp \
 	gui/widgets/minimap.cpp \
+	gui/widgets/multi_page.cpp \
 	gui/widgets/panel.cpp \
 	gui/widgets/password_box.cpp \
 	gui/widgets/settings.cpp \
