@@ -10,6 +10,7 @@ Version 1.7.0+svn:
    * Improved the layout algorithm not to show scrollbars when they make the
      situation worse
    * Add a new transient message dialog
+   * Add a new multi page widget
  * WML Engine:
    * Made new turn, turn X, side turn and turn refresh events synchronous.
      (bug #10603)
